add test k6
